added CGET, GET y HEAD + openapi spec
